syntax = "proto2";
package otsimo_form;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
	optional string format = 62003;
	optional string readonly = 62004;
	optional string hasDynamicSource = 62005;
	optional string sourceKey = 62005;
	optional object validator = 62007;
}